Fix word-wrap issue Fix #75

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ Theme URI: https://github.com/deshack/melany
 Author: Mattia Migliorini
 Author URI: http://www.deshack.net/
 Description: Melany, a simple responsive theme focused on content, everywhere.
-Version: 0.5.9
+Version: 0.5.10
 License: GNU Affero General Public License
 License URI: http://melany.deshack.net/LICENSE.txt
 Tags: light, green, two-columns, right-sidebar, flexible-width, custom-background, featured-image-header, full-width-template
@@ -40,6 +40,13 @@ body.admin-bar .navbar{
 /* Headings */
 h1, h2, h3, h4, h5, h6{
 	font-weight:300;
+	word-wrap: break-word;
+		-ms-word-wrap:break-word;
+}
+
+p {
+	word-wrap:break-word;
+		-ms-word-wrap:break-word;
 }
 
 /* Links */
